tests/invalid/error_06.robot
// error_06: [SINTÁCTICO] Falta punto y coma en declaración de sensor
sensor proximidad
rutina main() {
    si proximidad < 10:
        ejecutar avanzar();
}
